# club-rankings

./: .gitignore  DESCRIPTION  README.md  helpers.py  league-mapping.csv  pyproject.toml  requirements.txt  run.py  scrape-opta.py  scrape.py  team-mapping.csv  test.py
.github/workflows/: compare.yml  run.yaml  run.yml  scrape.yml
R/: 1-analyze.R  2-map-names.R  compare.R  dev-compare.R  map-names.R  x-cleanup.R
data/: fivethirtyeight-club-rankings.csv  opta-club-rankings.csv
data/2023-03-26/: rankings.csv
src/: backfill-clubelo.py  gh.py  opta.py  scrape-clubelo.py  scrape.py  utils.py
